@@ -14,7 +14,6 @@
 
 - Bugs:
     - some people cant see profiles correctly
-    - time on retweets
     - doesn't display pictures full screen when clicking on tweet
 
 - Notification Center:
