@@ -1,4 +1,9 @@
-<b>Version 1.20 Beta 3:</b><br/><br/>
+<b>Version 1.3.0:</b><br/><br/>
+    &#8226; Added size 30 font<br/>
+    &#8226; Better handling of retweets when viewing the tweet<br/>
+<br/><br/>
+
+<b>Version 1.2.0 Beta 3:</b><br/><br/>
     &#8226; More saving position on timeline<br/>
     &#8226; Fix for 24 hour clock<br/>
     &#8226; Fixed refresh on startup<br/>
